@@ -35,6 +35,9 @@
 		087F5B1712C53484008B6B72 /* IsCollectionContainingInOrderTest.m in Sources */ = {isa = PBXBuildFile; fileRef = 087F5B1612C53484008B6B72 /* IsCollectionContainingInOrderTest.m */; };
 		087F5B1D12C53618008B6B72 /* HCIsCollectionContainingInOrder.h in Headers */ = {isa = PBXBuildFile; fileRef = 087F5B1B12C53618008B6B72 /* HCIsCollectionContainingInOrder.h */; settings = {ATTRIBUTES = (Public, ); }; };
 		087F5B1E12C53618008B6B72 /* HCIsCollectionContainingInOrder.mm in Sources */ = {isa = PBXBuildFile; fileRef = 087F5B1C12C53618008B6B72 /* HCIsCollectionContainingInOrder.mm */; };
+		087F5C5512C6C2E0008B6B72 /* IsCollectionContainingInAnyOrderTest.m in Sources */ = {isa = PBXBuildFile; fileRef = 087F5C5412C6C2E0008B6B72 /* IsCollectionContainingInAnyOrderTest.m */; };
+		087F5C6112C6C349008B6B72 /* HCIsCollectionContainingInAnyOrder.h in Headers */ = {isa = PBXBuildFile; fileRef = 087F5C5F12C6C349008B6B72 /* HCIsCollectionContainingInAnyOrder.h */; settings = {ATTRIBUTES = (Public, ); }; };
+		087F5C6212C6C349008B6B72 /* HCIsCollectionContainingInAnyOrder.mm in Sources */ = {isa = PBXBuildFile; fileRef = 087F5C6012C6C349008B6B72 /* HCIsCollectionContainingInAnyOrder.mm */; };
 		089B9C781298B73200D4F34F /* Foundation.framework in Frameworks */ = {isa = PBXBuildFile; fileRef = 0F2A4B030D8B679900051BCF /* Foundation.framework */; };
 		08B5181912A058FA00147210 /* LICENSE.txt in Resources */ = {isa = PBXBuildFile; fileRef = 08B5181812A058FA00147210 /* LICENSE.txt */; };
 		08EEF681129E1A540076BFCC /* HCCollectMatchers.h in Headers */ = {isa = PBXBuildFile; fileRef = 08EEF67B129E1A540076BFCC /* HCCollectMatchers.h */; settings = {ATTRIBUTES = (Public, ); }; };
@@ -205,6 +208,9 @@
 		087F5B1612C53484008B6B72 /* IsCollectionContainingInOrderTest.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; path = IsCollectionContainingInOrderTest.m; sourceTree = "<group>"; };
 		087F5B1B12C53618008B6B72 /* HCIsCollectionContainingInOrder.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = HCIsCollectionContainingInOrder.h; sourceTree = "<group>"; };
 		087F5B1C12C53618008B6B72 /* HCIsCollectionContainingInOrder.mm */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.cpp.objcpp; path = HCIsCollectionContainingInOrder.mm; sourceTree = "<group>"; };
+		087F5C5412C6C2E0008B6B72 /* IsCollectionContainingInAnyOrderTest.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; path = IsCollectionContainingInAnyOrderTest.m; sourceTree = "<group>"; };
+		087F5C5F12C6C349008B6B72 /* HCIsCollectionContainingInAnyOrder.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = HCIsCollectionContainingInAnyOrder.h; sourceTree = "<group>"; };
+		087F5C6012C6C349008B6B72 /* HCIsCollectionContainingInAnyOrder.mm */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.cpp.objcpp; path = HCIsCollectionContainingInAnyOrder.mm; sourceTree = "<group>"; };
 		08B5181812A058FA00147210 /* LICENSE.txt */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; name = LICENSE.txt; path = ../LICENSE.txt; sourceTree = SOURCE_ROOT; };
 		08EEF67B129E1A540076BFCC /* HCCollectMatchers.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = HCCollectMatchers.h; sourceTree = "<group>"; };
 		08EEF67C129E1A540076BFCC /* HCCollectMatchers.mm */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.cpp.objcpp; path = HCCollectMatchers.mm; sourceTree = "<group>"; };
@@ -566,6 +572,7 @@
 			isa = PBXGroup;
 			children = (
 				0F2A4CDA0D8C808700051BCF /* IsCollectionContainingTest.m */,
+				087F5C5412C6C2E0008B6B72 /* IsCollectionContainingInAnyOrderTest.m */,
 				087F5B1612C53484008B6B72 /* IsCollectionContainingInOrderTest.m */,
 				0F2A4DE00D8C9DE100051BCF /* IsCollectionOnlyContainingTest.m */,
 				0FE5E3540D95D7470021A644 /* IsDictionaryContainingKeyTest.m */,
@@ -581,6 +588,8 @@
 			children = (
 				0F2A4CDE0D8C80E300051BCF /* HCIsCollectionContaining.h */,
 				0F2A4CDF0D8C80E300051BCF /* HCIsCollectionContaining.mm */,
+				087F5C5F12C6C349008B6B72 /* HCIsCollectionContainingInAnyOrder.h */,
+				087F5C6012C6C349008B6B72 /* HCIsCollectionContainingInAnyOrder.mm */,
 				087F5B1B12C53618008B6B72 /* HCIsCollectionContainingInOrder.h */,
 				087F5B1C12C53618008B6B72 /* HCIsCollectionContainingInOrder.mm */,
 				0F2A4DE70D8C9E8D00051BCF /* HCIsCollectionOnlyContaining.h */,
@@ -696,6 +705,7 @@
 				08EEF690129E1E190076BFCC /* NSObject+HCSelfDescribingValue.h in Headers */,
 				08EEF6A3129E1F5C0076BFCC /* HCInvocationMatcher.h in Headers */,
 				087F5B1D12C53618008B6B72 /* HCIsCollectionContainingInOrder.h in Headers */,
+				087F5C6112C6C349008B6B72 /* HCIsCollectionContainingInAnyOrder.h in Headers */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -948,6 +958,7 @@
 				0F1A545C10C46194009C870F /* IsEqualToNumberTest.m in Sources */,
 				0FA5A04B10C57983005FB8BB /* NumberAssertTest.m in Sources */,
 				087F5B1712C53484008B6B72 /* IsCollectionContainingInOrderTest.m in Sources */,
+				087F5C5512C6C2E0008B6B72 /* IsCollectionContainingInAnyOrderTest.m in Sources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -992,6 +1003,7 @@
 				08EEF6A4129E1F5C0076BFCC /* HCInvocationMatcher.mm in Sources */,
 				08EEFB8012A039320076BFCC /* NSObject+HCSelfDescribingValue.mm in Sources */,
 				087F5B1E12C53618008B6B72 /* HCIsCollectionContainingInOrder.mm in Sources */,
+				087F5C6212C6C349008B6B72 /* HCIsCollectionContainingInAnyOrder.mm in Sources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
