@@ -1,6 +1,7 @@
 == Version 1.1 == CHANGES IN PROGRESS
 
 * New matcher "contains" matches collection containing matching items in order.
+* New matcher "containsInAnyorder" matches sequence containing matching items in any order.
 * iOS: Fixed crash that occurred when trying to describe the matchers allOf, anyOf and isIn. Related to -ObjC linker flag.
 * Changed documentation from HTML to Xcode documentation set. Run "make install" from the Documentation folder to install.
 * Changed convenience methods to invoke superclass and return id, to support possibility of subclassing matchers.
